--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ body {
   max-width: 300px;
   margin-top: 50px;
   margin-bottom: 50px;
+  transition: all 0.3s ease-in-out;
+}
+.show:hover {
+  transform: scale(1.1);
 }
 .show h4:nth-child(2) {
   font-size: 20px;
